python-test/MiniJavaParser.py
# Generated from MiniJava.g4 by ANTLR 4.6
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO


class MiniJavaParser ( Parser ):

    grammarFileName = "MiniJava.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'class'", u"'{'", u"'public'", u"'static'", 
                     u"'void'", u"'main'", u"'('", u"'String'", u"'['", 
                     u"']'", u"')'", u"'}'", u"'extends'", u"';'", u"','", 
                     u"'int'", u"'boolean'", u"'if'", u"'else'", u"'while'", 
                     u"'System'", u"'.'", u"'out'", u"'println'", u"'='", 
                     u"'return'", u"'&&'", u"'<'", u"'+'", u"'-'", u"'*'", 
                     u"'!'", u"'new'", u"'length'", u"'true'", u"'false'", 
                     u"'this'" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"Identifier", u"INTEGER_LITERAL", 
                      u"WS", u"COMMENT" ]

    RULE_goal = 0
    RULE_mainClass = 1
    RULE_mainmethodleaf = 2
    RULE_paramfomain = 3
    RULE_classDeclaration = 4
    RULE_baseclass = 5
    RULE_methods = 6
    RULE_var = 7
    RULE_method = 8
    RULE_params = 9
    RULE_param = 10
    RULE_myvars = 11
    RULE_statements = 12
    RULE_returnmytype = 13
    RULE_mytype = 14
    RULE_statement = 15
    RULE_expression = 16
    RULE_andExpr = 17
    RULE_lessExpr = 18
    RULE_addExpr = 19
    RULE_multiplyExpr = 20
    RULE_notExpr = 21
    RULE_newarrayExpr = 22
    RULE_newExpr = 23
    RULE_element = 24
    RULE_args = 25
    RULE_special = 26
    RULE_name = 27
    RULE_specialElement = 28
    RULE_identifier = 29
    RULE_integer = 30

    ruleNames =  [ u"goal", u"mainClass", u"mainmethodleaf", u"paramfomain", 
                   u"classDeclaration", u"baseclass", u"methods", u"var", 
                   u"method", u"params", u"param", u"myvars", u"statements", 
                   u"returnmytype", u"mytype", u"statement", u"expression", 
                   u"andExpr", u"lessExpr", u"addExpr", u"multiplyExpr", 
                   u"notExpr", u"newarrayExpr", u"newExpr", u"element", 
                   u"args", u"special", u"name", u"specialElement", u"identifier", 
                   u"integer" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    Identifier=38
    INTEGER_LITERAL=39
    WS=40
    COMMENT=41

    def __init__(self, input):
        super(MiniJavaParser, self).__init__(input)
        self.checkVersion("4.6")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class GoalContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MiniJavaParser.GoalContext, self).__init__(parent, invokingState)
            self.parser = parser

        def mainClass(self):
            return self.getTypedRuleContext(MiniJavaParser.MainClassContext,0)


        def EOF(self):
            return self.getToken(MiniJavaParser.EOF, 0)

        def classDeclaration(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.ClassDeclarationContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.ClassDeclarationContext,i)


        def getRuleIndex(self):
            return MiniJavaParser.RULE_goal

        def enterRule(self, listener):
            if hasattr(listener, "enterGoal"):
                listener.enterGoal(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitGoal"):
                listener.exitGoal(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitGoal"):
                return visitor.visitGoal(self)
            else:
                return visitor.visitChildren(self)




    def goal(self):

        localctx = MiniJavaParser.GoalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_goal)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.mainClass()
            self.state = 66
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MiniJavaParser.T__0:
                self.state = 63
                self.classDeclaration()
                self.state = 68
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 69
            self.match(MiniJavaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MainClassContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MiniJavaParser.MainClassContext, self).__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(MiniJavaParser.NameContext,0)


        def mainmethodleaf(self):
            return self.getTypedRuleContext(MiniJavaParser.MainmethodleafContext,0)


        def getRuleIndex(self):
            return MiniJavaParser.RULE_mainClass

        def enterRule(self, listener):
            if hasattr(listener, "enterMainClass"):
                listener.enterMainClass(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitMainClass"):
                listener.exitMainClass(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitMainClass"):
                return visitor.visitMainClass(self)
            else:
                return visitor.visitChildren(self)




    def mainClass(self):

        localctx = MiniJavaParser.MainClassContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_mainClass)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(MiniJavaParser.T__0)
            self.state = 72
            self.name()
            self.state = 73
            self.mainmethodleaf()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MainmethodleafContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MiniJavaParser.MainmethodleafContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiniJavaParser.RULE_mainmethodleaf

     
        def copyFrom(self, ctx):
            super(MiniJavaParser.MainmethodleafContext, self).copyFrom(ctx)



    class MainMethodContext(MainmethodleafContext):

        def __init__(self, parser, ctx): # actually a MiniJavaParser.MainmethodleafContext)
            super(MiniJavaParser.MainMethodContext, self).__init__(parser)
            self.copyFrom(ctx)

        def paramfomain(self):
            return self.getTypedRuleContext(MiniJavaParser.ParamfomainContext,0)

        def statement(self):
            return self.getTypedRuleContext(MiniJavaParser.StatementContext,0)


        def enterRule(self, listener):
            if hasattr(listener, "enterMainMethod"):
                listener.enterMainMethod(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitMainMethod"):
                listener.exitMainMethod(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitMainMethod"):
                return visitor.visitMainMethod(self)
            else:
                return visitor.visitChildren(self)



    def mainmethodleaf(self):

        localctx = MiniJavaParser.MainmethodleafContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_mainmethodleaf)
        try:
            localctx = MiniJavaParser.MainMethodContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(MiniJavaParser.T__1)
            self.state = 76
            self.match(MiniJavaParser.T__2)
            self.state = 77
            self.match(MiniJavaParser.T__3)
            self.state = 78
            self.match(MiniJavaParser.T__4)
            self.state = 79
            self.match(MiniJavaParser.T__5)
            self.state = 80
            self.match(MiniJavaParser.T__6)
            self.state = 81
            self.match(MiniJavaParser.T__7)
            self.state = 82
            self.match(MiniJavaParser.T__8)
            self.state = 83
            self.match(MiniJavaParser.T__9)
            self.state = 84
            self.paramfomain()
            self.state = 85
            self.match(MiniJavaParser.T__10)
            self.state = 86
            self.match(MiniJavaParser.T__1)
            self.state = 87
            self.statement()
            self.state = 88
            self.match(MiniJavaParser.T__11)
            self.state = 89
            self.match(MiniJavaParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamfomainContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MiniJavaParser.ParamfomainContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiniJavaParser.RULE_paramfomain

     
        def copyFrom(self, ctx):
            super(MiniJavaParser.ParamfomainContext, self).copyFrom(ctx)



    class MainParamContext(ParamfomainContext):

        def __init__(self, parser, ctx): # actually a MiniJavaParser.ParamfomainContext)
            super(MiniJavaParser.MainParamContext, self).__init__(parser)
            self.copyFrom(ctx)

        def identifier(self):
            return self.getTypedRuleContext(MiniJavaParser.IdentifierContext,0)


        def enterRule(self, listener):
            if hasattr(listener, "enterMainParam"):
                listener.enterMainParam(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitMainParam"):
                listener.exitMainParam(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitMainParam"):
                return visitor.visitMainParam(self)
            else:
                return visitor.visitChildren(self)



    def paramfomain(self):

        localctx = MiniJavaParser.ParamfomainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_paramfomain)
        try:
            localctx = MiniJavaParser.MainParamContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.identifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ClassDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MiniJavaParser.ClassDeclarationContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiniJavaParser.RULE_classDeclaration

     
        def copyFrom(self, ctx):
            super(MiniJavaParser.ClassDeclarationContext, self).copyFrom(ctx)



    class ClassContext(ClassDeclarationContext):

        def __init__(self, parser, ctx): # actually a MiniJavaParser.ClassDeclarationContext)
            super(MiniJavaParser.ClassContext, self).__init__(parser)
            self.copyFrom(ctx)

        def name(self):
            return self.getTypedRuleContext(MiniJavaParser.NameContext,0)

        def myvars(self):
            return self.getTypedRuleContext(MiniJavaParser.MyvarsContext,0)

        def methods(self):
            return self.getTypedRuleContext(MiniJavaParser.MethodsContext,0)

        def baseclass(self):
            return self.getTypedRuleContext(MiniJavaParser.BaseclassContext,0)


        def enterRule(self, listener):
            if hasattr(listener, "enterClass"):
                listener.enterClass(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitClass"):
                listener.exitClass(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitClass"):
                return visitor.visitClass(self)
            else:
                return visitor.visitChildren(self)



    def classDeclaration(self):

        localctx = MiniJavaParser.ClassDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_classDeclaration)
        self._la = 0 # Token type
        try:
            localctx = MiniJavaParser.ClassContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(MiniJavaParser.T__0)
            self.state = 94
            self.name()
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MiniJavaParser.T__12:
                self.state = 95
                self.match(MiniJavaParser.T__12)
                self.state = 96
                self.baseclass()


            self.state = 99
            self.match(MiniJavaParser.T__1)
            self.state = 100
            self.myvars()
            self.state = 101
            self.methods()
            self.state = 102
            self.match(MiniJavaParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BaseclassContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MiniJavaParser.BaseclassContext, self).__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(MiniJavaParser.IdentifierContext,0)


        def getRuleIndex(self):
            return MiniJavaParser.RULE_baseclass

        def enterRule(self, listener):
            if hasattr(listener, "enterBaseclass"):
                listener.enterBaseclass(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitBaseclass"):
                listener.exitBaseclass(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitBaseclass"):
                return visitor.visitBaseclass(self)
            else:
                return visitor.visitChildren(self)




    def baseclass(self):

        localctx = MiniJavaParser.BaseclassContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_baseclass)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.identifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MethodsContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MiniJavaParser.MethodsContext, self).__init__(parent, invokingState)
            self.parser = parser

        def method(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.MethodContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.MethodContext,i)


        def getRuleIndex(self):
            return MiniJavaParser.RULE_methods

        def enterRule(self, listener):
            if hasattr(listener, "enterMethods"):
                listener.enterMethods(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitMethods"):
                listener.exitMethods(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitMethods"):
                return visitor.visitMethods(self)
            else:
                return visitor.visitChildren(self)




    def methods(self):

        localctx = MiniJavaParser.MethodsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_methods)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MiniJavaParser.T__2:
                self.state = 106
                self.method()
                self.state = 111
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MiniJavaParser.VarContext, self).__init__(parent, invokingState)
            self.parser = parser

        def mytype(self):
            return self.getTypedRuleContext(MiniJavaParser.MytypeContext,0)


        def identifier(self):
            return self.getTypedRuleContext(MiniJavaParser.IdentifierContext,0)


        def getRuleIndex(self):
            return MiniJavaParser.RULE_var

        def enterRule(self, listener):
            if hasattr(listener, "enterVar"):
                listener.enterVar(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitVar"):
                listener.exitVar(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitVar"):
                return visitor.visitVar(self)
            else:
                return visitor.visitChildren(self)




    def var(self):

        localctx = MiniJavaParser.VarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_var)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.mytype()
            self.state = 113
            self.identifier()
            self.state = 114
            self.match(MiniJavaParser.T__13)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MethodContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MiniJavaParser.MethodContext, self).__init__(parent, invokingState)
            self.parser = parser

        def returnmytype(self):
            return self.getTypedRuleContext(MiniJavaParser.ReturnmytypeContext,0)


        def name(self):
            return self.getTypedRuleContext(MiniJavaParser.NameContext,0)


        def myvars(self):
            return self.getTypedRuleContext(MiniJavaParser.MyvarsContext,0)


        def statements(self):
            return self.getTypedRuleContext(MiniJavaParser.StatementsContext,0)


        def params(self):
            return self.getTypedRuleContext(MiniJavaParser.ParamsContext,0)


        def getRuleIndex(self):
            return MiniJavaParser.RULE_method

        def enterRule(self, listener):
            if hasattr(listener, "enterMethod"):
                listener.enterMethod(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitMethod"):
                listener.exitMethod(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitMethod"):
                return visitor.visitMethod(self)
            else:
                return visitor.visitChildren(self)




    def method(self):

        localctx = MiniJavaParser.MethodContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_method)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(MiniJavaParser.T__2)
            self.state = 117
            self.returnmytype()
            self.state = 118
            self.name()
            self.state = 119
            self.match(MiniJavaParser.T__6)
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MiniJavaParser.T__15) | (1 << MiniJavaParser.T__16) | (1 << MiniJavaParser.Identifier))) != 0):
                self.state = 120
                self.params()


            self.state = 123
            self.match(MiniJavaParser.T__10)
            self.state = 124
            self.match(MiniJavaParser.T__1)
            self.state = 125
            self.myvars()
            self.state = 126
            self.statements()
            self.state = 127
            self.match(MiniJavaParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamsContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MiniJavaParser.ParamsContext, self).__init__(parent, invokingState)
            self.parser = parser

        def param(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.ParamContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.ParamContext,i)


        def getRuleIndex(self):
            return MiniJavaParser.RULE_params

        def enterRule(self, listener):
            if hasattr(listener, "enterParams"):
                listener.enterParams(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitParams"):
                listener.exitParams(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitParams"):
                return visitor.visitParams(self)
            else:
                return visitor.visitChildren(self)




    def params(self):

        localctx = MiniJavaParser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_params)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.param()
            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MiniJavaParser.T__14:
                self.state = 130
                self.match(MiniJavaParser.T__14)
                self.state = 131
                self.param()
                self.state = 136
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MiniJavaParser.ParamContext, self).__init__(parent, invokingState)
            self.parser = parser

        def mytype(self):
            return self.getTypedRuleContext(MiniJavaParser.MytypeContext,0)


        def identifier(self):
            return self.getTypedRuleContext(MiniJavaParser.IdentifierContext,0)


        def getRuleIndex(self):
            return MiniJavaParser.RULE_param

        def enterRule(self, listener):
            if hasattr(listener, "enterParam"):
                listener.enterParam(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitParam"):
                listener.exitParam(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitParam"):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = MiniJavaParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.mytype()
            self.state = 138
            self.identifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MyvarsContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MiniJavaParser.MyvarsContext, self).__init__(parent, invokingState)
            self.parser = parser

        def var(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.VarContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.VarContext,i)


        def getRuleIndex(self):
            return MiniJavaParser.RULE_myvars

        def enterRule(self, listener):
            if hasattr(listener, "enterMyvars"):
                listener.enterMyvars(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitMyvars"):
                listener.exitMyvars(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitMyvars"):
                return visitor.visitMyvars(self)
            else:
                return visitor.visitChildren(self)




    def myvars(self):

        localctx = MiniJavaParser.MyvarsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_myvars)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 140
                    self.var() 
                self.state = 145
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementsContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MiniJavaParser.StatementsContext, self).__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.StatementContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.StatementContext,i)


        def getRuleIndex(self):
            return MiniJavaParser.RULE_statements

        def enterRule(self, listener):
            if hasattr(listener, "enterStatements"):
                listener.enterStatements(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitStatements"):
                listener.exitStatements(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitStatements"):
                return visitor.visitStatements(self)
            else:
                return visitor.visitChildren(self)




    def statements(self):

        localctx = MiniJavaParser.StatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_statements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MiniJavaParser.T__1) | (1 << MiniJavaParser.T__17) | (1 << MiniJavaParser.T__19) | (1 << MiniJavaParser.T__20) | (1 << MiniJavaParser.T__25) | (1 << MiniJavaParser.Identifier))) != 0):
                self.state = 146
                self.statement()
                self.state = 151
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ReturnmytypeContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MiniJavaParser.ReturnmytypeContext, self).__init__(parent, invokingState)
            self.parser = parser

        def mytype(self):
            return self.getTypedRuleContext(MiniJavaParser.MytypeContext,0)


        def getRuleIndex(self):
            return MiniJavaParser.RULE_returnmytype

        def enterRule(self, listener):
            if hasattr(listener, "enterReturnmytype"):
                listener.enterReturnmytype(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitReturnmytype"):
                listener.exitReturnmytype(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitReturnmytype"):
                return visitor.visitReturnmytype(self)
            else:
                return visitor.visitChildren(self)




    def returnmytype(self):

        localctx = MiniJavaParser.ReturnmytypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_returnmytype)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.mytype()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MytypeContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MiniJavaParser.MytypeContext, self).__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(MiniJavaParser.IdentifierContext,0)


        def getRuleIndex(self):
            return MiniJavaParser.RULE_mytype

        def enterRule(self, listener):
            if hasattr(listener, "enterMytype"):
                listener.enterMytype(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitMytype"):
                listener.exitMytype(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitMytype"):
                return visitor.visitMytype(self)
            else:
                return visitor.visitChildren(self)




    def mytype(self):

        localctx = MiniJavaParser.MytypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_mytype)
        try:
            self.state = 160
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 154
                self.match(MiniJavaParser.T__15)
                self.state = 155
                self.match(MiniJavaParser.T__8)
                self.state = 156
                self.match(MiniJavaParser.T__9)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 157
                self.match(MiniJavaParser.T__16)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 158
                self.match(MiniJavaParser.T__15)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 159
                self.identifier()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MiniJavaParser.StatementContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiniJavaParser.RULE_statement

     
        def copyFrom(self, ctx):
            super(MiniJavaParser.StatementContext, self).copyFrom(ctx)



    class OutputContext(StatementContext):

        def __init__(self, parser, ctx): # actually a MiniJavaParser.StatementContext)
            super(MiniJavaParser.OutputContext, self).__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(MiniJavaParser.ExpressionContext,0)


        def enterRule(self, listener):
            if hasattr(listener, "enterOutput"):
                listener.enterOutput(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitOutput"):
                listener.exitOutput(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitOutput"):
                return visitor.visitOutput(self)
            else:
                return visitor.visitChildren(self)


    class AssignArrayContext(StatementContext):

        def __init__(self, parser, ctx): # actually a MiniJavaParser.StatementContext)
            super(MiniJavaParser.AssignArrayContext, self).__init__(parser)
            self.copyFrom(ctx)

        def identifier(self):
            return self.getTypedRuleContext(MiniJavaParser.IdentifierContext,0)

        def expression(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.ExpressionContext)
            else:
